# cpython-example

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: CMakeLists.txt
src/cpython_example/: CMakeLists.txt
src/cpython_example/mymath/: CMakeLists.txt  main.c
tests/: test.py
